Lock the JVM-args contract of the Compiler launch tasks
Consumer builds need to attach the JaCoCo agent to the JVM forked by
`launch*SpineCompiler` tasks to capture the coverage of the Compiler
plugins executed there (see `.agents/tasks/compiler-coverage-plan.md`,
Phases 0-1). The tasks already preserve consumer-supplied JVM arguments;
this change turns that behavior into a supported, regression-tested
contract:

 - `LaunchTaskJvmArgsSpec` locks in-process that the launch task is a
   plain `JavaExec` and consumer JVM args coexist with the defaults.
 - `LaunchTaskCoverageSpec` with the new `coverage-agent-test` fixture
   locks end-to-end that an agent attached via `jvmArgumentProviders`
   reaches the fork, records plugin-class execution matching the jars
   the fork loaded (class IDs), and survives an `UP-TO-DATE` launch.
 - The `LaunchSpineCompiler` KDoc now declares the fork options part of
   the task's public contract.
 - `RunnerTuning.tuneRunner()` deduplicates the TestKit runner setup
   shared by `PluginSpec` and the new spec.

The task plan is updated with the Phase 0 findings (decision gate A:
no relocation in the fat CLI, class IDs match by construction) and the
Phase 1 outcome.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>